k8s/db_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-db
  template:
    metadata:
      labels:
        app: url-db
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - containerPort: 3306
