k8s/backend_redirect_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-micro-redirect
spec:
  type: NodePort
  ports:
  - port: 3000
    nodePort: 30002
  selector:
    app: backend-micro-redirect
