k8s/backend_short_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-micro-short
spec:
  type: NodePort
  ports:
  - port: 5000
    nodePort: 30001
  selector:
    app: backend-micro-short
