k8s/db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-db
spec:
  ports:
  - port: 3306
  selector:
    app: url-db
